# nfl.big.data.bowl

./: README.md  const.py  main.py  nfl-big-data-bowl-pred.ipynb  notebook.ipynb  pyproject.toml  utils.py  visualize.ipynb
kaggle/input/nfl-big-data-bowl-2026-prediction/: input_slice.csv
